calc/calc.output
Grammar

    0 $accept: calculo $end

    1 calculo: calculo comando ENTER
    2        | %empty

    3 comando: expr
    4        | VAR ATRIBUI expr

    5 expr: NUM
    6     | VAR
    7     | expr MAIS expr
    8     | expr MENOS expr
    9     | expr BARRA expr
   10     | expr VEZES expr
   11     | ABRE expr FECHA


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    NUM (258) 5
    MAIS (259) 7
    MENOS (260) 8
    ABRE (261) 11
    FECHA (262) 11
    ATRIBUI (263) 4
    BARRA (264) 9
    VEZES (265) 10
    VAR (266) 4 6
    ENTER (267) 1


Nonterminals, with rules where they appear

    $accept (13)
        on left: 0
    calculo (14)
        on left: 1 2
        on right: 0 1
    comando (15)
        on left: 3 4
        on right: 1
    expr (16)
        on left: 5 6 7 8 9 10 11
        on right: 3 4 7 8 9 10 11


State 0

    0 $accept: . calculo $end

    $default  reduce using rule 2 (calculo)

    calculo  go to state 1


State 1

    0 $accept: calculo . $end
    1 calculo: calculo . comando ENTER

    $end  shift, and go to state 2
    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 5

    comando  go to state 6
    expr     go to state 7


State 2

    0 $accept: calculo $end .

    $default  accept


State 3

    5 expr: NUM .

    $default  reduce using rule 5 (expr)


State 4

   11 expr: ABRE . expr FECHA

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 9


State 5

    4 comando: VAR . ATRIBUI expr
    6 expr: VAR .

    ATRIBUI  shift, and go to state 10

    $default  reduce using rule 6 (expr)


State 6

    1 calculo: calculo comando . ENTER

    ENTER  shift, and go to state 11


State 7

    3 comando: expr .
    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . BARRA expr
   10     | expr . VEZES expr

    MAIS   shift, and go to state 12
    MENOS  shift, and go to state 13
    BARRA  shift, and go to state 14
    VEZES  shift, and go to state 15

    $default  reduce using rule 3 (comando)


State 8

    6 expr: VAR .

    $default  reduce using rule 6 (expr)


State 9

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . BARRA expr
   10     | expr . VEZES expr
   11     | ABRE expr . FECHA

    MAIS   shift, and go to state 12
    MENOS  shift, and go to state 13
    FECHA  shift, and go to state 16
    BARRA  shift, and go to state 14
    VEZES  shift, and go to state 15


State 10

    4 comando: VAR ATRIBUI . expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 17


State 11

    1 calculo: calculo comando ENTER .

    $default  reduce using rule 1 (calculo)


State 12

    7 expr: expr MAIS . expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 18


State 13

    8 expr: expr MENOS . expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 19


State 14

    9 expr: expr BARRA . expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 20


State 15

   10 expr: expr VEZES . expr

    NUM   shift, and go to state 3
    ABRE  shift, and go to state 4
    VAR   shift, and go to state 8

    expr  go to state 21


State 16

   11 expr: ABRE expr FECHA .

    $default  reduce using rule 11 (expr)


State 17

    4 comando: VAR ATRIBUI expr .
    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . BARRA expr
   10     | expr . VEZES expr

    MAIS   shift, and go to state 12
    MENOS  shift, and go to state 13
    BARRA  shift, and go to state 14
    VEZES  shift, and go to state 15

    $default  reduce using rule 4 (comando)


State 18

    7 expr: expr . MAIS expr
    7     | expr MAIS expr .
    8     | expr . MENOS expr
    9     | expr . BARRA expr
   10     | expr . VEZES expr

    BARRA  shift, and go to state 14
    VEZES  shift, and go to state 15

    $default  reduce using rule 7 (expr)


State 19

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    8     | expr MENOS expr .
    9     | expr . BARRA expr
   10     | expr . VEZES expr

    BARRA  shift, and go to state 14
    VEZES  shift, and go to state 15

    $default  reduce using rule 8 (expr)


State 20

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . BARRA expr
    9     | expr BARRA expr .
   10     | expr . VEZES expr

    $default  reduce using rule 9 (expr)


State 21

    7 expr: expr . MAIS expr
    8     | expr . MENOS expr
    9     | expr . BARRA expr
   10     | expr . VEZES expr
   10     | expr VEZES expr .

    $default  reduce using rule 10 (expr)
